modified:   3er-Cuatrimestre/Aplicaciones-Web/Actividades/Practica_1/CSS/estilos.css

--- a/3er-Cuatrimestre/Aplicaciones-Web/Actividades/Practica_1/CSS/estilos.css
+++ b/3er-Cuatrimestre/Aplicaciones-Web/Actividades/Practica_1/CSS/estilos.css
@@ -1,7 +1,9 @@
-*{
-    /*margin: 0px;
-    padding: 0px;*/
+/*
+{
+    margin: 0px;
+    padding: 0px;
 }
+    */
 body{
     background: gray url();
     font-family: Arial, Helvetica, sans-serif;
